--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
 
   <body>
+    <div class="navbar">
+        <a href="#games-container" class="navbar-link">Our Games</a>
+    </div>
+
     <!-- header row with logo -->
     <div class="header">
         <img id="tentacles" src="assets/tentacles.png">
